adding new sbt launcher